[package]
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
description = "Find the difference between arbitrary data structures"
documentation = "https://docs.rs/treediff"
keywords = ["diff", "structure", "tree", "arbitrary", "general"]
categories = ["algorithms"]
license = "MIT/Apache-2.0"
name = "treediff"
repository = "https://github.com/Byron/treediff-rs"
version = "2.5.0"

[dependencies]
rustc-serialize = {version = "0.3.22", optional = true}
serde_json = {version = "0.9", optional = true}
serde_yaml = {version = "0.6", optional = true}
yaml-rust = {version = "0.3", optional = true}

[features]
with-rustc-serialize = ["rustc-serialize"]
with-serde-json = ["serde_json"]
with-serde-yaml = ["serde_yaml"]
with-yaml-rust = ["yaml-rust"]

